# driftlock

./: .claudeignore  .dockerignore  .editorconfig  .env.backup  .env.bak  .env.example  .firebaserc  .gcloudignore  .gitignore  .gitmodules  .golangci.yml  .mailmap  .mcp.json  .pre-commit-config.yaml  .replit  .secret-scan-ignore  .todo  AGENTS.md  AI-AGENT-HANDOFF.md  AI_DEPLOYMENT_PROMPT.md  AI_HANDOFF_PROMPT.md  ALTERNATIVE_PRICING_STRATEGY.md  BRANDING.md  BUGFIXES.md  CF_WORKERS_SETUP_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_PAGES_DEPLOY.md  CLOUDSQL_FIREBASE_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTED_PRICING.md  CORRECT_STRIPE_CONFIG.md  CRYPTO_ANOMALY_AUTOMATION.md  Cargo.toml  DEMO.md  DEPLOYMENT_STATUS.txt  DEPLOYMENT_SUMMARY.md  DEVELOPER_VS_ENTERPRISE_PRICING_ANALYSIS.md  (+107 more)
.archive/: docker-compose-kafka.yml.archived  docker-compose.test.yml.archived  go.mod  go.sum  go.work  go.work.sum  start.sh  test-integration-simple.sh  verify-deployment.sh
.archive/sdks/python/: pyproject.toml
.archive/sdks/python/driftlock_sdk/: __init__.py  client.py
.dev_docs/: AGENTS.md  AUDIT_REPORT.md  CRACKED_DEV_GEMINI.md
.devcontainer/: devcontainer.json  post-create.sh
.firebase/: .graphqlrc  hosting.bGFuZGluZy1wYWdlL2Rpc3Q.cache
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  repository-settings.yml
api-server/: go.mod  go.sum
cbad-core/: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs
cbad-core/benches/: detection_bench.rs
cbad-core/examples/: benchmark_labeled.rs  comprehensive_benchmark.rs  crypto_stream.rs  end_to_end.rs  kaggle_benchmarks.rs  test_datasets.rs
cbad-core/src/: anomaly.rs  api.rs  calibration.rs  error.rs  ffi.rs  ffi_simplified.rs  ffi_simplified.rs.bak  ffi_simplified_fixed.rs  fusion.rs  lib.rs  otlp.rs  performance.rs  stats.rs  storage.rs  stream_manager.rs  tokenizer.rs  window.rs
cbad-core/src/compression/: fallback.rs  mod.rs  openzl.rs
cbad-core/src/metrics/: compression_ratio.rs  delta_bits.rs  entropy.rs  mod.rs  ncd.rs  permutation.rs
cloudflare-api-worker/: deploy.sh  package-lock.json  package.json  test-worker.ts  wrangler.jsonc  wrangler.toml
cloudflare-deployment/: deploy.sh
cmd/: AGENTS.md
collector-processor/: AGENTS.md  README.md  go.mod  go.sum  manifest.yaml  test_cbad_test.go  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_8.txt
crates/driftlock-ai/: Cargo.toml  INTEGRATION.md  README.md
crates/driftlock-ai/examples/: analyze_anomaly.rs
crates/driftlock-ai/src/: config.rs  cost.rs  error.rs  lib.rs  sanitize.rs
crates/driftlock-ai/src/client/: claude.rs  mod.rs
crates/driftlock-auth/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/driftlock-auth/examples/: verify_token.rs
crates/driftlock-auth/src/: api_key.rs  firebase.rs  lib.rs
crates/driftlock-billing/: Cargo.toml
crates/driftlock-billing/src/: lib.rs
crates/driftlock-db/: Cargo.toml
crates/driftlock-db/src/: error.rs  lib.rs  pool.rs
crates/driftlock-db/src/models/: anchor.rs  anomaly.rs  api_key.rs  calibration.rs  driftlog.rs  incident.rs  mod.rs  stream.rs  tenant.rs  tuning.rs  waitlist.rs
crates/driftlock-db/src/repos/: anchor.rs  anomaly.rs  api_key.rs  calibration.rs  driftlog.rs  incident.rs  mod.rs  stream.rs  tenant.rs  tuning.rs  waitlist.rs
crates/driftlock-email/: Cargo.toml  README.md
crates/driftlock-email/examples/: send_emails.rs
crates/driftlock-email/src/: lib.rs
dataconnect/: dataconnect.yaml
deploy/: collector-config.yaml  docker-compose.yml  nginx.conf
docs/: AI_ROUTING.md  API-DEMO-WALKTHROUGH.md  API.md  API_DEPLOYMENT_STATUS.md  ARCHITECTURE.md  AUTO_CONFIG_DESIGN.md  BENCHMARK_HANDOFF.md  BENCHMARK_PLAN.md  BUILD.md  CAPTURE-ANOMALY-SCREENSHOT.md  CBAD_SYSTEM.md  CLAUDE_4.5_PRICING.md  CODING_STANDARDS.md  COMPLIANCE_DORA.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  DEPLOY_API_GUIDE.md  DEVELOPMENT.md  KEY_FILES.md  LAUNCH_SECRETS_GUIDE.md  LAUNCH_STATUS.md  OPENZL_ANALYSIS.md  PHASE1_STATUS.md  PHASE4_SUMMARY.md  PRELAUNCH_INFRA_PREREQS.md  QUICKSTARTS.md  README.md  ROADMAP_TO_LAUNCH.md  RUNBOOKS.md  SALES-MODELING.md  decision-log.md  installation.md  phase6-kafka-config.md  phase6-kickoff.md
functions/: .eslintrc.js  .gcloudignore  package-lock.json  package.json  tsconfig.json
infrastructure/: cloudflare-r2.tf  setup-r2.sh
k8s/: configmap.yaml  deployment.yaml  production.yaml  secrets.yaml  service.yaml
landing-page/: .env.production  .eslintignore  .eslintrc.cjs  .firebaserc  AGENTS.md  AI_REVIEWER_QUICK_START.md  DEPLOYMENT.md  FIREBASE_CLOUDFLARE_FIXES.md  README.md  REVIEW_AND_ENHANCE_PROMPT.md  YC_APPLICATION_REVIEW.md  firebase.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  wrangler.toml
llm-receivers/: README.md  go.mod
playground/: package-lock.json  package.json  tailwind.config.js
press/: README.md  fact-sheet.md
productized/: .air.toml  .env.example  CloudflarePages.toml  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  go.mod  go.sum
prompts/: BACKEND_DEFAULTS_CODEX.md  CBAD_FULL_INTEGRATION_PROMPT.md  CLAUDE_CODE_LAUNCH_PROMPT.md  NEXT_SESSION_HANDOFF.md  REPLIT_HOSTING_ANALYSIS.md  STRIPE_SETUP_PROMPT.md  UX_OVERHAUL_HANDOFF.md  VERIFICATION_QA_PROMPT.md
screenshots/: api-demo-detect.txt  api-demo-psql.txt
scripts/: README_SENDGRID.md  TEST_FULL_FLOW.md  alert_on_anomaly.sh  api-demo.tape  api_crypto_test.py  api_crypto_test_sensitive.py  auto_crypto_monitor.sh  auto_screen_recorder.sh  capture-anomaly-card.applescript  capture-anomaly-card.sh  chaos-report.py  check-sendgrid.sh  check-setup-status.sh  create-test-api-key-cloudrun.sh  create-test-api-key.sh  crypto_bridge.py  db-setup.sh  demo.sh  deploy-cloudflare.sh  deploy-functions-secure.sh  deploy-landing.sh  deploy-production-cloudsql-firebase.sh  deploy-production.sh  fix-build-issues.sh  gcloud.sh  (+66 more)
(+914 files in other folders)
