[workspace]
resolver = "2"
members = [
    "cbad-core",
    "crates/driftlock-api",
    "crates/driftlock-db",
    "crates/driftlock-auth",
    "crates/driftlock-billing",
    "crates/driftlock-email",
    "crates/driftlock-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Shannon-Labs/driftlock"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "catch-panic", "limit", "fs"] }
hyper = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
base32 = "0.5"

# Stripe
async-stripe = { version = "0.37", features = ["runtime-tokio-hyper"] }

# Email
reqwest = { version = "0.12", features = ["json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
config = "0.14"
dotenvy = "0.15"

# CBAD core (workspace member)
cbad_core = { path = "cbad-core" }
