[package]
name = "cbad_core"
version = "0.0.1"
edition = "2021"

[lib]
name = "cbad_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["openzl"]
openzl = []  # Enable OpenZL compression adapter

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Note: Using std::os::raw for C FFI types instead of libc to avoid network dependency

[build-dependencies]
cc = "1.0"  # For linking C/C++ libraries

