[package]
name = "cbad_core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Patent-pending compression-based anomaly detection core"
repository = "https://github.com/Shannon-Labs/driftlock"

[lib]
name = "cbad_core"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []            # No external adapters by default; zstd/lz4/gzip only
openzl = []             # Optional: OpenZL adapter (not enabled by default)
debug = []              # Enable debug output

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fastrand = "2"
zstd = "0.13"
lz4 = "1.24"
flate2 = "1.0"
log = "0.4.28"
env_logger = "0.11.8"
# Note: Using std::os::raw for C FFI types instead of libc to avoid network dependency

[build-dependencies]
cc = "1.0"  # For linking C/C++ libraries
