[package]
name = "driftlock-billing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Stripe
async-stripe.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
