[package]
name = "driftlock-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Database
sqlx.workspace = true
deadpool-redis.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Auth (for API key hashing)
argon2.workspace = true
base32.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand = "0.8"
