[project]
name = "driftlock-sdk"
version = "0.1.0"
description = "Lightweight Python client for Driftlock's /v1 API (detect, anomalies, healthz)"
authors = [{ name = "Shannon Labs" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/Shannon-Labs/driftlock"
Repository = "https://github.com/Shannon-Labs/driftlock"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
